--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "dependencies": {
     "core-js": "^3.19.1",
+    "jquery": "^3.6.3",
+    "jquery-ui-bundle": "^1.12.1-migrate",
     "moment": "2.29.1",
     "normalize-scss": "^7.0.1"
   }
